faker user avatar

--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -13,7 +13,9 @@
   height: 52px;
   border-radius: 50%;
   margin: 0 15px 0 13px;
-  background-color: khaki;
+
+  /* background: center / contain no-repeat url( https://s3.amazonaws.com/uifaces/faces/twitter/alexandermayes/128.jpg); */
+  background-color: --background-top-color;
 }
 
 .contact__info {
@@ -49,4 +51,5 @@
 .contact__lastmessage_text {
   font-size: .9rem;
   opacity: .6;
+  overflow: hidden;
 }
