--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ code {
   --background-mid-color: #d9dbd5;
   --content-background-color: #f8f9fb;
   --intro-secondary: rgba(0, 0, 0, 0.45);
+  --header-control-background: #d5d5d5;
   --page-shadow-rgb: rgb(162, 162, 162);
   --page-margin-top: 19px;
   --page-margin-top-bottom: 38px;
