--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -14,7 +14,7 @@
   border-radius: 50%;
   margin: 0 15px 0 13px;
 
-  /* background: center / contain no-repeat url( https://s3.amazonaws.com/uifaces/faces/twitter/alexandermayes/128.jpg); */
+  background: center / contain no-repeat url('/images/avatar-default.png');
   background-color: --background-top-color;
 }
 
