--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -8,7 +8,7 @@
   position: relative;
 }
 
-.contact__logo {
+.contact__avatar {
   width: 52px;
   height: 52px;
   border-radius: 50%;
@@ -21,14 +21,19 @@
 .contact__info {
   display: flex;
   flex-direction: column;
-  height: 62px;
+  height: 52px;
 
   position: absolute;
   left: 77px;
   right: 0;
-  padding-top: 5px;
 
   border-bottom: 1px solid var(--sidebar-border-color);
+}
+
+.contact__info_wrap {
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
 }
 
 .contact__info_header {
@@ -36,20 +41,62 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
+  height: 22.5px;
+  margin-bottom: 2px;
 }
 
-.contact__userName {
+.contact__info_userName {
   font-size: 1.3rem;
 }
-
-.contact__lastmessage_date {
+.contact__info_date {
   font-size: .8rem;
   margin-bottom: 4px;
   margin-right: 10px;
   opacity: .5;
 }
+
+.contact__lastmessage_wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 20px;
+}
+
 .contact__lastmessage_text {
-  font-size: .9rem;
+  font-size: 14px;
   opacity: .6;
   overflow: hidden;
+}
+
+.dialog__settings_wrap {
+  width: 20px;
+  height: 15px;
+  margin-right: 20px;
+  position: relative;
+}
+.dialog__settings_wrap .dialog__settings_mark:first-child {
+  display: none;
+  content: '';
+  height: 2px;
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0.392);
+  transform: rotateZ(45deg);
+  position: absolute;
+  top: 6px;
+  left: 3px;
+}
+.dialog__settings_wrap .dialog__settings_mark:last-child {
+  display: none;
+  content: '';
+  height: 2px;
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0.392);
+  transform: rotateZ(-45deg);
+  position: absolute;
+  top: 6px;
+  left: 9px;
+}
+.dialog__wrap:hover .dialog__settings_mark {
+  display: block;
 }
