--- a/src/components/Sidebar/Dialogs/Dialogs.css
+++ b/src/components/Sidebar/Dialogs/Dialogs.css
@@ -10,6 +10,10 @@
 	overflow-y: auto;
 }
 
+.dialogs__wrap li {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 1300px) {
   .dialogs__wrap {
     width: calc(var(--sidebar-width-35) - 1px);
