onclick-selecting active dialog

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,4 +1,4 @@
-.page__content {
+.page__content_home {
   background-color: var(--content-background-color);
   display: flex;
   justify-content: center;
@@ -9,14 +9,14 @@
   color: var(--intro-secondary);
 }
 
-.page__content h2 {
+.page__content_home h2 {
   width: 460px;
   font-weight: 300;
   font-size: 36px;
   margin-bottom: 24px;
 }
 
-.page__content p {
+.page__content_home p {
   width: 460px;
   
   line-height: 22px;
