--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -1,8 +1,10 @@
+.active {
+  background-color: var(--sidebar-active-dialog-background);
+}
+
 .dialog__wrap {
   height: 72px;
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
 
   display: flex;
   position: relative;
@@ -12,7 +14,7 @@
   width: 52px;
   height: 52px;
   border-radius: 50%;
-  margin: 0 15px 0 13px;
+  margin: 10px 15px;
 
   background: center / contain no-repeat url('/images/avatar-default.png');
   background-color: --background-top-color;
@@ -21,14 +23,23 @@
 .contact__info {
   display: flex;
   flex-direction: column;
-  height: 52px;
+  height: 72px;
 
   position: absolute;
   left: 77px;
   right: 0;
 
-  border-bottom: 1px solid var(--sidebar-border-color);
+  border-bottom: 1px solid var(--sidebar-dialog-border-color);
 }
+
+/* .contact__info::after {
+  display: block;
+  content: '';
+  height: 1px;
+  width: 100%;
+  background-color: red;
+  margin-top: 0px
+} */
 
 .contact__info_wrap {
   display: flex;
