--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,8 @@ code {
   --background-top-color: #009688;
   --background-top-height: 125px;
   --background-mid-color: #d9dbd5;
-  --content-background-color: #f8f9fb;
+  --content-main-background-color: #f8f9fb;
+  --content-dialogs-background-color: #e5ddd5;
   --intro-secondary: rgba(0, 0, 0, 0.45);
   --header-control-background: #d5d5d5;
   --page-shadow-rgb: rgb(162, 162, 162);
