--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -150,7 +150,7 @@
   }
 }
 
-/* ------------------------Footer------------------------ */
+/* ------------------------ Footer ------------------------ */
 .activedialog__footer {
   height: 70px;
   background-color: var(--sidebar-header-background);
@@ -168,28 +168,4 @@
   align-items: center;
   opacity: .5;
   cursor: pointer;
-}
-
-.footer__input {
-  width: 90%;
-}
-
-.footer__input input {
-  border: 0;
-  width: 100%;
-  height: 42px;    margin: 5px 10px;
-  padding: 9px 12px 11px;
-  border-radius: 21px;
-}
-
-@media only screen and (max-width: 1100px) {
-  .footer__input input {
-    width: 98%;
-  }
-}
-
-@media only screen and (max-width: 950px) {
-  .footer__input input {
-    width: 95%;
-  }
 }
