--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -169,3 +169,29 @@
   opacity: .5;
   cursor: pointer;
 }
+
+/* ------------------------ Form ------------------------ */
+.input__form {
+  width: 90%;
+}
+
+.input__form_text {
+  border: 0;
+  width: 100%;
+  height: 42px;    margin: 5px 10px;
+  padding: 9px 15px 11px;
+  border-radius: 21px;
+}
+
+/* ------------------------ Media ------------------------ */
+@media only screen and (max-width: 1100px) {
+  .input__form_text {
+    width: 98%;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .input__form_text {
+    width: 95%;
+  }
+}
