--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+:root {
+  --background-top-color: #009688;
+  --background-top-height: 125px;
+  --background-mid-color: #d9dbd5;
+  --content-main-background-color: #f8f9fb;
+  --content-dialogs-background-color: #daba9b;
+  --intro-secondary: rgba(0, 0, 0, 0.45);
+  --header-control-background: #d5d5d5;
+  --message-incoming-background: white;
+  --message-outgoing-background: #dcf8d6;
+  --page-shadow-rgb: rgb(162, 162, 162);
+  --page-margin-top: 19px;
+  --page-margin-top-bottom: 38px;
+  --sidebar-background-color: white;
+  --sidebar-border-color: #e4e4e4;
+  --sidebar-active-dialog-background: #ebebeb;
+  --sidebar-dialog-border-color: #dddddd8e;
+  --sidebar-header-background: #ededed;
+  --sidebar-search-background: #f6f6f6;
+  --sidebar-width-30: 30%;
+  --sidebar-width-35: 35%;
+  --sidebar-width-40: 40%;
+  --scroll-track-color: #f6f6f6;
+  --scroll-thumb-color: #dfdbdb;
+  --search-container-background: #f6f6f6;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -27,27 +54,13 @@ code {
     monospace;
 }
 
-:root {
-  --background-top-color: #009688;
-  --background-top-height: 125px;
-  --background-mid-color: #d9dbd5;
-  --content-main-background-color: #f8f9fb;
-  --content-dialogs-background-color: #daba9b;
-  --intro-secondary: rgba(0, 0, 0, 0.45);
-  --header-control-background: #d5d5d5;
-  --message-incoming-background: white;
-  --message-outgoing-background: #dcf8d6;
-  --page-shadow-rgb: rgb(162, 162, 162);
-  --page-margin-top: 19px;
-  --page-margin-top-bottom: 38px;
-  --sidebar-background-color: white;
-  --sidebar-border-color: #e4e4e4;
-  --sidebar-active-dialog-background: #ebebeb;
-  --sidebar-dialog-border-color: #dddddd8e;
-  --sidebar-header-background: #ededed;
-  --sidebar-search-background: #f6f6f6;
-  --sidebar-width-30: 30%;
-  --sidebar-width-35: 35%;
-  --sidebar-width-40: 40%;
-  --search-container-background: #f6f6f6;
+*::-webkit-scrollbar {
+  width: 7px;
+}
+*::-webkit-scrollbar-track {
+  background: var(--scroll-track-color);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-thumb-color);
+  border-radius: 20px;
 }
