--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -153,7 +153,8 @@
 
 /* ------------------------ Footer ------------------------ */
 .activedialog__footer {
-  height: 70px;
+  /* height: 70px; */
+  /* height: auto; */
   background-color: var(--sidebar-header-background);
   margin-top: auto;
   display: flex;
@@ -177,9 +178,24 @@
 }
 
 .input__form_text {
+  background-color: white;
   border: 0;
   width: 100%;
-  height: 42px;    margin: 5px 10px;
+  height: auto;    
+  margin: 5px 10px;
+  padding: 9px 15px 11px;
+  border-radius: 21px;
+}
+.div__form_text {
+  display:inline-block;
+  background-color: white;
+  border: 0;
+  width: 100%;
+  max-height: 150px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: auto;    
+  margin: 5px 10px;
   padding: 9px 15px 11px;
   border-radius: 21px;
 }
