--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -13,8 +13,10 @@
   grid-template-columns: 30% 70%;
 
   box-shadow: 
-    0 1px 1px 0 var(--page-shadow-rgb),
-    0 2px 5px 0 var(--page-shadow-rgb);
+    4px 4px 12px 0 var(--page-shadow-rgb),
+    0px 0px 0px 0 var(--page-shadow-rgb);
+    
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 1440px) {
