--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   text-align: center;
   color: var(--intro-secondary);
+  border-left: 1px solid var(--sidebar-border-color);
 }
 
 .page__content_home h2 {
