--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -180,11 +180,14 @@
 }
 
 .div__form_text {
+
+  resize:none;
+
   display:inline-block;
   background-color: white;
   border: 0;
   width: 100%;
-  max-height: 150px;
+  max-height: 70px;
   overflow-x: hidden;
   overflow-y: auto;
   height: auto;    
