--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -179,9 +179,7 @@
   width: 90%;
 }
 
-.div__form_text {
-
-  resize:none;
+.input__form_text {
 
   display:inline-block;
   background-color: white;
@@ -195,20 +193,20 @@
   padding: 9px 15px 11px;
   border-radius: 21px;
 }
-.div__form_text:empty:before {
+.input__form_text:empty:before {
   content: attr(data-placeholder);
   opacity: .5;
 }
 
 /* ------------------------ Media ------------------------ */
 @media only screen and (max-width: 1100px) {
-  .div__form_text {
+  .input__form_text {
     width: 98%;
   }
 }
 
 @media only screen and (max-width: 950px) {
-  .div__form_text {
+  .input__form_text {
     width: 95%;
   }
 }
