save draft messages to dialogs

--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -79,6 +79,9 @@
   opacity: .6;
   overflow: hidden;
 }
+.contact__lastmessage_text.draft {
+  color: var(--text--draft--color);
+}
 
 .dialog__settings_wrap {
   width: 20px;
