--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
   --scroll-thumb-color: #dfdbdb;
   --search-container-background: #f6f6f6;
   --text--light--grey--color: grey;
+  --text--draft--color: #c05f5a;
 }
 
 * {
