--- a/src/components/Sidebar/SidebarModal/SidebarModalContent/Profile.css
+++ b/src/components/Sidebar/SidebarModal/SidebarModalContent/Profile.css
@@ -28,7 +28,7 @@
   height: 100%;
   background-color: rgba(128, 128, 128, 0.529);
   border-radius: 50%;
-  border: 2px dashed rgb(63, 63, 63);
+  /* border: 2px dashed rgb(63, 63, 63); */
 }
 
 /* PROFILE NAME */
