--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -114,8 +114,10 @@
 }
 
 .content__message {
-  margin-bottom: 12px;
-  padding: 6px 7px 8px 9px;
+  margin-bottom: 40px;
+  font-size: 24px;
+  /* margin-bottom: 12px; */
+  padding: 20px 20px 20px 20px;
   max-width: 65%;
   border: 1px solid var(--sidebar-border-color);
   border-radius: 9px;
