--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -17,6 +17,7 @@
     0px 0px 0px 0 var(--page-shadow-rgb);
     
     overflow: hidden;
+    /* overflow: auto; */
 }
 
 @media only screen and (max-width: 1440px) {
