--- a/src/components/Content/ActiveDialog/ActiveDialog.css
+++ b/src/components/Content/ActiveDialog/ActiveDialog.css
@@ -77,7 +77,7 @@
 .activedialog__content_background {
     width: 100%;
     height: 100%;
-    background-image: url(/images/wallpaper-min.png);
+    background-image: url("../../../img/wallpaper-min.png");
     opacity: .7;
 }
 .activedialog__content_background::after {
