--- a/src/components/Sidebar/Dialogs/Dialog/Dialog.css
+++ b/src/components/Sidebar/Dialogs/Dialog/Dialog.css
@@ -16,7 +16,7 @@
   border-radius: 50%;
   margin: 10px 15px;
 
-  background: center / contain no-repeat url('/images/avatar-default.png');
+  background: center / contain no-repeat url('../../../../img/avatar-default.png');
   background-color: --background-top-color;
 }
 
